compiler/fir/analysis-tests/testData/resolve/problems/incompleteUserType.kt
fun foo(a : <!UNRESOLVED_REFERENCE!>Unresolved<!>.<!SYNTAX!><!>) {}
